--- a/src/configs/eval_config.yml
+++ b/src/configs/eval_config.yml
@@ -5,7 +5,7 @@ res: 320
 batch_size: 8
 num_workers: 24
 run_picie: True
-run_crf: False
+run_crf: True
 run_prediction: True
 dark_mode: True
 use_ddp: False
