Add updated architecture with lower mem footprint and custom training

--- a/src/configs/demo_config.yml
+++ b/src/configs/demo_config.yml
@@ -1,7 +1,7 @@
 output_root: '../'
-model_path: "../saved_models/potsdam_test.ckpt"
-image_dir: "../samples"
-experiment_name: "demo_potsdam"
+model_path: "../saved_models/cocostuff27_vit_base_5.ckpt"
+image_dir: "/datadrive/pytorch-data/cocostuff/images/val2017"
+experiment_name: "cocostuff_val"
 res: 320
 batch_size: 8
 num_workers: 24
