--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -1,21 +1,24 @@
 output_root: '../'
 pytorch_data_dir: '/datadrive/pytorch-data/'
 experiment_name: "exp1"
-log_dir: "iarpa"
+log_dir: "cocostuff27"
 azureml_logging: True
 submitting_to_aml: False
 
 # Loader params
 num_workers: 24
 max_steps: 5000
-
+batch_size: 16
 
 num_neighbors: 7
+dataset_name: "cocostuff27"
 
-batch_size: 16
-dataset_name: "iarpa"
+# Used if dataset_name is "directory"
+dir_dataset_name: ~
+dir_dataset_n_classes: 5
+
 has_labels: False
-crop_type: ~
+crop_type: "five"
 crop_ratio: .5
 res: 224
 loader_crop_type: "center"
