--- a/src/configs/train_config.yml
+++ b/src/configs/train_config.yml
@@ -1,15 +1,16 @@
-output_root: '../'
-pytorch_data_dir: 'E:/Dataset/'
-experiment_name: "exp1"
+output_root: '/content/drive/MyDrive/Unsupervised_Seg/STEGO/chp_voc/'
+# pytorch_data_dir: '/content/drive/MyDrive/Unsupervised_Seg'
+pytorch_data_dir: '/content/drive/MyDrive/Unsupervised_Seg'
+experiment_name: "exp3"
 log_dir: "voc12"
 azureml_logging: True
 submitting_to_aml: False
 
 # Loader params
-num_workers: 8
-max_steps: 5000
-batch_size: 16
-precompute_batch_size: 128
+num_workers: 4
+max_steps: 100000
+batch_size: 32
+precompute_batch_size: 200
 
 num_neighbors: 7
 dataset_name: "directory"
@@ -19,7 +20,7 @@ dir_dataset_name: VOC12
 dir_dataset_n_classes: 20
 
 has_labels: False
-crop_type: None
+crop_type: null
 crop_ratio: .5
 res: 224
 loader_crop_type: "center"
@@ -57,12 +58,12 @@ correspondence_weight: 1.0
 
 
 # IAROA vit small 1/31/22
-neg_inter_weight: 0.63
-pos_inter_weight: 0.25
-pos_intra_weight: 0.67
-neg_inter_shift: 0.46
-pos_inter_shift: 0.12
-pos_intra_shift: 0.18
+# neg_inter_weight: 0.63
+# pos_inter_weight: 0.25
+# pos_intra_weight: 0.67
+# neg_inter_shift: 0.46
+# pos_inter_shift: 0.12
+# pos_intra_shift: 0.18
 
 # Potsdam vit small 1/31/22
 #neg_inter_weight: 0.63
@@ -73,12 +74,12 @@ pos_intra_shift: 0.18
 #pos_intra_shift: 0.08
 
 # Cocostuff27 vit small 1/31/22
-#neg_inter_weight: 0.63
-#pos_inter_weight: 0.25
-#pos_intra_weight: 0.67
-#neg_inter_shift: 0.66
-#pos_inter_shift: 0.02
-#pos_intra_shift: 0.08
+neg_inter_weight: 0.63
+pos_intra_weight: 0.67
+pos_inter_weight: 0.25
+neg_inter_shift: 0.66
+pos_inter_shift: 0.02
+pos_intra_shift: 0.08
 
 
 ## Cocostuff27 10/3 vit_base
