Revert to original.

--- a/environment.yml
+++ b/environment.yml
@@ -4,27 +4,26 @@ channels:
 - conda-forge
 - menpo
 dependencies:
-- python=3.9
-- pip
-- pytorch
-- torchvision
-- torchaudio
-  # - cudatoolkit=11.0
-  # - nvidia-apex==0.1.0
+- python=3.6.9
+- pip>=21.0,<22
+- pytorch==1.7.1
+- torchvision==0.8.2
+- torchaudio==0.7.2
+- cudatoolkit=11.0
+- nvidia-apex==0.1.0
 - scikit-image
 - opencv
-  # - cupy
+- cupy
 - pytorch-lightning
 - pip:
-  - mypy
-  - matplotlib
-  - psutil
-  - tqdm
-  - pandas
-  - scipy
-  - numpy
-  - tensorboard
-  - future
+  - matplotlib>=3.3,<3.4
+  - psutil>=5.8,<5.9
+  - tqdm>=4.59,<4.60
+  - pandas>=1.1,<1.2
+  - scipy>=1.5,<1.6
+  - numpy>=1.10,<1.20
+  - tensorboard==2.4.0
+  - future==0.17.1
   - --find-links https://pytorch-geometric.com/whl/torch-1.7.0+cu110.html
   - kornia
   - hydra-core
@@ -32,8 +31,7 @@ dependencies:
   - seaborn
   - easydict
   - torchpq
-  - git+https://github.com/lucasb-eyer/pydensecrf.git
-  - setuptools
-  - pyDeprecate
-  - cython
+  - pydensecrf
+  - setuptools==59.5.0
+  - pyDeprecate==0.3.1
 name: stego
