--- a/src/configs/eval_config.yaml
+++ b/src/configs/eval_config.yaml
@@ -3,8 +3,8 @@ pytorch_data_dir: '/Users/mclapp/ml/pytorch_data/'
 experiment_name: "cocostuff"
 res: 320
 batch_size: 8
-num_workers: 24
-run_picie: True
+num_workers: 10
+run_picie: False
 run_crf: True
 run_prediction: True
 dark_mode: True
