--- a/src/configs/plot_config.yaml
+++ b/src/configs/plot_config.yaml
@@ -1,5 +1,8 @@
-output_root: '../'
-pytorch_data_dir: '/Users/mclapp/ml/pytorch_data/'
+# base_config has common preferences for all configs
+defaults:
+  - base_config
+  - _self_
+
 experiment_name: "exp1"
 log_dir: "cleaning"
 
@@ -8,7 +11,6 @@ plot_movie: True
 
 
 # Loader params
-num_workers: 24
 max_steps: 5000
 
 num_neighbors: 7
@@ -42,10 +44,3 @@ pretrained_weights: ~
 use_salience: False
 stabalize: False
 stop_at_zero: True
-
-hydra:
-  run:
-    dir: "."
-  output_subdir: ~
-  #job_logging: "disabled"
-  #hydra_logging: "disabled"
