--- a/src/configs/base_config.yaml
+++ b/src/configs/base_config.yaml
@@ -1,3 +1,5 @@
+defaults:
+  - override hydra/job_logging: custom
 num_workers: 10
 pytorch_data_dir: '/Users/mclapp/ml/pytorch_data/'
 output_root: '../'
