Reorganize to use master_config.yaml.

--- a/src/configs/dataset/cityscapes.yaml
+++ b/src/configs/dataset/cityscapes.yaml
@@ -11,25 +11,25 @@ crop_knn:
     - 0.5
 
 
-num_neighbors: 7
 # dataset_name: "cityscapes"
 
 # Cityscapes
-neg_inter_weight: .72
-pos_inter_weight: .18
-pos_intra_weight: .46
+train:
+  neg_inter_weight: .72
+  pos_inter_weight: .18
+  pos_intra_weight: .46
 
-neg_inter_shift: .25
-pos_inter_shift: .20
-pos_intra_shift: .25
+  neg_inter_shift: .25
+  pos_inter_shift: .20
+  pos_intra_shift: .25
 
-# Cityscapes 10/3
-#neg_inter_weight: 0.9058762625226623
-#pos_inter_weight: 0.577453483136995
-#pos_intra_weight: 1
-#
-#neg_inter_shift: 0.31361241889448443
-#pos_inter_shift: 0.1754346515479633
-#pos_intra_shift: 0.45828472207
+  # Cityscapes 10/3
+  #neg_inter_weight: 0.9058762625226623
+  #pos_inter_weight: 0.577453483136995
+  #pos_intra_weight: 1
+  #
+  #neg_inter_shift: 0.31361241889448443
+  #pos_inter_shift: 0.1754346515479633
+  #pos_intra_shift: 0.45828472207
 
 log_dir: "cityscapes"
