--- a/src/configs/dataset/directory.yaml
+++ b/src/configs/dataset/directory.yaml
@@ -10,19 +10,19 @@ crop_knn:
   crop_ratios:
     - 0.5
 
-# Used if dataset_name is "directory"
-dir_dataset_name: null
-dir_dataset_n_classes: 5
+train:
+  # Used if dataset_name is "directory"
+  dir_dataset_name: null
+  dir_dataset_n_classes: 5
 
-num_neighbors: 7
-# dataset_name: "directory"
+  # dataset_name: "directory"
 
-# Potsdam vit small 1/31/22
-# neg_inter_weight: 0.63
-# pos_inter_weight: 0.25
-# pos_intra_weight: 0.67
-# neg_inter_shift: 0.46
-# pos_inter_shift: 0.02
-# pos_intra_shift: 0.08
+  # Potsdam vit small 1/31/22
+  neg_inter_weight: 0.63
+  pos_inter_weight: 0.25
+  pos_intra_weight: 0.67
+  neg_inter_shift: 0.46
+  pos_inter_shift: 0.02
+  pos_intra_shift: 0.08
 
 log_dir: "directory"
