--- a/src/configs/master_config.yaml
+++ b/src/configs/master_config.yaml
@@ -1,12 +1,12 @@
 defaults:
   - dataset@_global_: cityscapes
   - override hydra/job_logging: custom
-  - _self_
+  - _self_ # this file overrides all others
 
 num_workers: 10
 pytorch_data_dir: '/Users/mclapp/nb/ml/pytorch_data/'
 output_root: '../'
-
+use_cuda: False
 
 # Loader Config used multiple places
 # res: 224 (train, plot) or 320 (demo, eval)
